--- a/READme.Rmd
+++ b/READme.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "README-count_all_missing_by_group"
 output: github_document
-date: "`r Sys.Date()`"
+date: "2024-11-08"
 ---
 # Overview
 
@@ -17,9 +17,9 @@ devtools::install_github("swetha0897/missingvaluesfunction")
 - **R Function**: The `count_all_missing_by_group` function for counting missing values.
 - **Example Dataset**: Utilizes the built-in `airquality` dataset to demonstrate functionality.
 - **Usage Examples**: Code snippets show how to use the function for different grouping scenarios.
-- **Description** of the file can be found in the `missingvalues` folder
-- **Function**  can be found as a `missingvalues.R` file in the R folder withint `missingvalues` folder
-- **tests** folder within `missing values folder` includes the tests done on a sample dataset.
+- **Description** gives a detailed description of the missing values function.
+- **Function**  can be found as a `missingvalues.R` file in the R folder
+- **tests** folder which includes the tests done on a sample dataset.
 
 # Key Features
 
